cmake_minimum_required(VERSION 3.14)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp main.cpp)
add_executable(19 19.cpp)
add_executable(237 237.cpp)
add_executable(206 206.cpp)
add_executable(876 876.cpp)
add_executable(617 617.cpp)
add_executable(121 121.cpp)
add_executable(21 21.cpp)
add_executable(83 83.cpp)
add_executable(server server.cpp)
add_executable(client client.cpp)
add_executable(guanglianda2 guanglianda2.cpp)
add_executable(yanghui_angle yanghui_angle.cpp)
add_executable(order_gouzaohanshu order_gouzaohanshu.cpp)
add_executable(order_gouzaohanshu2 order_gouzaohanshu2.cpp)
add_executable(dongtaiduotai dongtaiduotai.cpp)








